--- a/static/index.html
+++ b/static/index.html
@@ -3,48 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lancée de poids</title>
+    <title>Lancer de poids</title>
 
-    <!-- Bootstrap CSS (Assurez-vous de télécharger le fichier bootstrap.min.css et de l'inclure dans votre projet) -->
-    <link rel="stylesheet" href="chemin/vers/bootstrap.min.css">
-
-    <style>
-        /* Ajoutez vos styles CSS ici */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style href="main.css"></style>
+    
 </head>
 <body>
 
     <header>
-        <h1>Lancée de poids</h1>
+        <h1>Lancer de poids</h1>
     </header>
 
     <section>
@@ -61,8 +30,9 @@
     <!-- Votre script JavaScript pour le jeu -->
     <script src="chemin/vers/votre-script.js"></script>
 
-    <!-- Bootstrap JavaScript (Assurez-vous de télécharger le fichier bootstrap.min.js et de l'inclure dans votre projet) -->
-    <script src="chemin/vers/bootstrap.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
     <footer>
         <p>&copy; Shot Put. Tous droits réservés.</p>
