--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,12 @@
     </header>
 
     <section>
-        <h2>Commencez votre aventure ici!</h2>
-        <h2>Règles du jeu</h2>
+        <h1>Règles du jeu</h1>
+        <p>nombre de dés : 8</p>
+        <p>nombre de tentatives: 3</p>
+        <p>Jeter les dés un par un. On peut s'arrêter à tout moment. La tentative se termine après la lancée des 8 dés.</p>
+        <p>Obtenir un "un" entraine que la tentative est invalide</p>
+        <p>Score: somme de la valeur de tous les dés lancés par le joueur dans une tentative.</p>
 
         <!-- Ajoutez vos éléments de jeu ici -->
 
