la page est beeeeelle

--- a/static/jeu/index.html
+++ b/static/jeu/index.html
@@ -45,7 +45,7 @@
                                 </div>
                             </div>
                             <h4>Total de la tentative </h4>
-                            <p id="totalresult"></p>
+                            <h2 id="totalresult"></h2>
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
@@ -87,12 +87,12 @@
                     <div class="row">
 
                         <div>
-                            <p>Première tentative</p>
-                            <p id="resultattot1"></p>
-                            <p>Deuxième tentative</p>
-                            <p id="resultattot2"></p>
-                            <p>Troisième tentative</p>
-                            <p id="resultattot3"></p>
+                            <h2>Première tentative</h2>
+                            <h5 id="resultattot1"></h5>
+                            <h2>Deuxième tentative</h2>
+                            <h5 id="resultattot2"></h5>
+                            <h2>Troisième tentative</h2>
+                            <h5 id="resultattot3"></h5>
                         </div>
                     </div>
                 </section>
