--- a/static/jeu/index.html
+++ b/static/jeu/index.html
@@ -107,6 +107,10 @@
     <script src="./js/script.js"></script>
 
     <!-- Three.js -->
+    // URLs des images pour chaque face du dé
+    const imageUrls = [
+       
+    ];
     // Création d'un dé avec 6 faces
         const createDice = () => {
             const geometry = new THREE.BoxGeometry();
