--- a/static/jeu/index.html
+++ b/static/jeu/index.html
@@ -108,7 +108,8 @@
 
     <!-- Three.js -->
     // URLs des images pour chaque face du dé
-    const imageUrls = [
+    const imageUrls = ['https://www.calculator.net/img/dice1.png',
+    
        
     ];
     // Création d'un dé avec 6 faces
