--- a/static/jeu/index.html
+++ b/static/jeu/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lancer de poids</title>
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/main.css">
@@ -72,7 +70,7 @@
                 <button type="button" id="stopBtn" class="btn btn-primary enabled">
                     Arrêter le lancer
                 </button>
-                <div class="col-xs-12">
+                <div id='inst'class="col-xs-12">
                     <p></p>
                     <h2>Instructions</h2>
                     <p>Appuyez sur le bouton <strong>Lancer!</strong> pour lancer le poids. Appuyez sur le bouton
@@ -85,7 +83,6 @@
                 <!-- Right container -->
                 <section id="game" class="container-fluid">
                     <div class="row">
-
                         <div>
                             <h2>Première tentative</h2>
                             <h5 id="resultattot1"></h5>
@@ -107,48 +104,7 @@
     <script src="./js/script.js"></script>
 
     <!-- Three.js -->
-    // URLs des images pour chaque face du dé
-    const imageUrls = ['https://www.calculator.net/img/dice1.png',
-    'https://www.calculator.net/img/dice2.png',
-    'https://www.calculator.net/img/dice3.png',
-    'https://www.calculator.net/img/dice4.png',
-    'https://www.calculator.net/img/dice5.png',
-    'https://www.calculator.net/img/dice6.png',
-       ];
-    // Charger les textures pour chaque face du dé
-    const textures = imageUrls.map(url => new THREE.TextureLoader().load(url));
-    // Créer un matériau avec les textures chargées
-    const materialArray = textures.map(texture => new THREE.MeshBasicMaterial({ map: texture }));
-     // Créer un matériau composé des textures
-    const material = new THREE.MeshFaceMaterial(materialArray);
-    // Création d'un dé avec 6 faces
-        const createDice = () => {
-            const geometry = new THREE.BoxGeometry();
-            return new THREE.Mesh(geometry, material);
-        };
-    // Ajout de 8 dés à la scène
-        const dice = Array.from({ length: 8 }, createDice);
-        dice.forEach((die, index) => {
-            die.position.x = (index % 4) * 2;
-            die.position.y = Math.floor(index / 4) * 2;
-            scene.add(die);
-        });
-    // Fonction de lancer de dé
-        const rollDice = () => {
-            dice.forEach(die => {
-                die.rotation.x += Math.random() * 2 * Math.PI;
-                die.rotation.y += Math.random() * 2 * Math.PI;
-                die.rotation.z += Math.random() * 2 * Math.PI;
-            });
-        };
-    // Animation de la scène
-        const animate = () => {
-            requestAnimationFrame(animate);
-            renderer.render(scene, camera);
-        };
-
-
-
+    <script type="module" src="/index.js"></script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -167,6 +123,9 @@
                 }
             );
         </script>
+<footer>
+    <p>&copy; Shot Put. Tous droits réservés.</p>
+</footer>
 
 </body>
 
