--- a/static/jeu/index.html
+++ b/static/jeu/index.html
@@ -67,9 +67,10 @@
                 <button type="button" id="button" class="btn btn-primary enabled">
                     Lancer!
                 </button>
-                <button type="button" id="stopBtn" class="btn btn-primary enabled">
+                <button type="button" id="stopBtn" class="stopBtn">
                     Arrêter le lancer
                 </button>
+                <button type="button" class="reloadBtn" onClick="window.location.reload();"><img src="https://cdn-icons-png.flaticon.com/512/20/20151.png" height="25"></button>
                 <div id='inst'class="col-xs-12">
                     <p></p>
                     <h2>Instructions</h2>
