--- a/static/jeu/index.html
+++ b/static/jeu/index.html
@@ -68,7 +68,7 @@
                     Lancer!
                 </button>
                 <button type="button" id="stopBtn" class="stopBtn">
-                    Arrêter le lancer
+                    Arrêter la tentative
                 </button>
                 <button type="button" class="reloadBtn" onClick="window.location.reload();"><img src="https://cdn-icons-png.flaticon.com/512/20/20151.png" height="25"></button>
                 <div id='inst'class="col-xs-12">
